--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.86"
 gtk4 = "0.8.1"
+serde = { version = "1.0.204", features = ["derive"] }
+toml = "0.8.14"
